--- a/about.html
+++ b/about.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <header>
+<title>Nicholas Shaw</title>
+<meta name="description" content="Nick Shaw's development and professional portfolio" />
+<link rel="stylesheet" href="retro.css"> <!-- Must keep 1 line more than content-->
 </header>
 <body>
 <h1>Nicholas Shaw</h1>
