--- a/about.html
+++ b/about.html
@@ -8,6 +8,6 @@
 <body>
 <h1>Nicholas Shaw</h1>
 <h6>Computer Science, Problem Solving, Research and Development</h6>
-<p><a href="nicholasshaw.dev/home.html">Home</a> | <a href="nicholasshaw.dev/projects.html">Projects</a> | <a href="nicholasshaw.dev/blog.html">Blog</a> | <b><i><a href="nicholasshaw.dev/about.html">About</a></b></i> | <a href="nicholasshaw.dev/connect.html">Connect</a></p>
+<p><a href="/home.html">Home</a> | <a href="/projects.html">Projects</a> | <a href="/blog.html">Blog</a> | <b><i><a href="/about.html">About</a></b></i> | <a href="/connect.html">Connect</a></p>
 </body>
 </html>
