--- a/see-you-at-the-finish-line-a-web-scraper-performance-improvement-analysis.html
+++ b/see-you-at-the-finish-line-a-web-scraper-performance-improvement-analysis.html
@@ -4,6 +4,9 @@
 <title>Nicholas Shaw</title>
 <meta name="description" content="Nick Shaw's development and professional portfolio" />
 <link rel="stylesheet" href="retro.css"> <!-- Must keep 1 line more than content-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </header>
 <body>
 <br>
