updated to make index.html root file

--- a/about.html
+++ b/about.html
@@ -11,6 +11,6 @@
 <body>
 <h1>Nicholas Shaw</h1>
 <h6>Computer Science, Problem Solving, Research and Development</h6>
-<p><a href="/home.html">Home</a> | <a href="/projects.html">Projects</a> | <a href="/blog.html">Blog</a> | <b><i><a href="/about.html">About</a></b></i> | <a href="/connect.html">Connect</a></p>
+<p><a href="/index.html">Home</a> | <a href="/projects.html">Projects</a> | <a href="/blog.html">Blog</a> | <b><i><a href="/about.html">About</a></b></i> | <a href="/connect.html">Connect</a></p>
 </body>
 </html>
