--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <h1>Nicholas Shaw</h1>
 <h6>Computer Science, Problem Solving, Research and Development</h6>
-<p><b><i><a href="/home.html">Home</a></b></i> | <a href="/projects.html">Projects</a> | <a href="/blog.html">Blog</a> | <a href="/about.html">About</a> | <a href="/connect.html">Connect</a></p>
+<p><b><i><a href="/index.html">Home</a></b></i> | <a href="/projects.html">Projects</a> | <a href="/blog.html">Blog</a> | <a href="/about.html">About</a> | <a href="/connect.html">Connect</a></p>
 <h3>Welcome to my Website!</h3>
 <p>I'm <b>Nick</b>, and I love solving problems. Currently, I am a computer science masters student at the University of Colorado Boulder. While in school, I am actively looking for opportunities to collaborate with and learn from others. If this sounds like you, let's <a href="/connect.html">connect</a>!</p>
 <h3>What is the purpose of this website?</h3>
