--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 <body>
 <h1>Nicholas Shaw</h1>
 <h6>Computer Science, Problem Solving, Research and Development</h6>
-<p><a href="/home.html">Home</a> | <b><i><a href="/projects.html">Projects</a></b></i> | <a href="/blog.html">Blog</a> | <a href="/about.html">About</a> | <a href="/connect.html">Connect</a></p>
+<p><a href="/index.html">Home</a> | <b><i><a href="/projects.html">Projects</a></b></i> | <a href="/blog.html">Blog</a> | <a href="/about.html">About</a> | <a href="/connect.html">Connect</a></p>
 <h3>Cryptocurrency Data Scraper</h3>
 <p><a href="/cryptocurrency-data-scraper.html">Project Page</a> | <a href="https://github.com/nshaw928/cryptocurrency-data-scraper">GitHub Repository</a></p>
 <h6>Description</h6>
