--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 <body>
 <h1>Nicholas Shaw</h1>
 <h6>Computer Science, Problem Solving, Research and Development</h6>
-<p><a href="/home.html">Home</a> | <a href="/projects.html">Projects</a> | <b><i><a href="/blog.html">Blog</a></b></i> | <a href="/about.html">About</a> | <a href="/connect.html">Connect</a></p>
+<p><a href="/index.html">Home</a> | <a href="/projects.html">Projects</a> | <b><i><a href="/blog.html">Blog</a></b></i> | <a href="/about.html">About</a> | <a href="/connect.html">Connect</a></p>
 <h3><a href="/see-you-at-the-finish-line-a-web-scraper-performance-improvement-analysis.html">See You at the Finish Line, a Web Scraper Performance Improvement Analysis</a></h3>
 <p>YYYY-MM-DD</p>
 <p>Read about how I identified problem code, improved it, measured the improvement, and analyzed the improvement.</p>
