--- a/about.html
+++ b/about.html
@@ -10,7 +10,9 @@
 </header>
 <body>
 <h1>Nicholas Shaw</h1>
-<h6>Computer Science, Problem Solving, Research and Development</h6>
+<p>Computer Science, Problem Solving, Research and Development</p>
 <p><a href="/index.html">Home</a> | <a href="/projects.html">Projects</a> | <a href="/blog.html">Blog</a> | <b><i><a href="/about.html">About</a></b></i> | <a href="/connect.html">Connect</a></p>
+<h3>Oops</h3>
+<p>You're early! This page has not yet been written. Some information on me can be found on my <a href="https://www.linkedin.com/in/nicholasryanshaw/">LinkedIn</a> and <a href="https://github.com/nshaw928">GitHub</a>. Alternatively, send me an email at connect@nicholasshaw.email</p>
 </body>
 </html>
