--- a/index.html
+++ b/index.html
@@ -10,23 +10,19 @@
 </header>
 <body>
 <h1>Nicholas Shaw</h1>
-<h6>Computer Science, Problem Solving, Research and Development</h6>
+<p>Computer Science, Problem Solving, Research and Development</p>
 <p><b><i><a href="/index.html">Home</a></b></i> | <a href="/projects.html">Projects</a> | <a href="/blog.html">Blog</a> | <a href="/about.html">About</a> | <a href="/connect.html">Connect</a></p>
-<h3>Welcome to my Website!</h3>
+<h3>Welcome to my website.</h3>
 <p>I'm <b>Nick</b>, and I love solving problems. Currently, I am a computer science masters student at the University of Colorado Boulder. While in school, I am actively looking for opportunities to collaborate with and learn from others. If this sounds like you, let's <a href="/connect.html">connect</a>!</p>
+<br>
 <h3>What is the purpose of this website?</h3>
-<p>This website was created to serve as a home for my <a href="/projects.html">projects</a> and <a href="/blog.html">blog</a>. It is updated regularly to include the newest projects and posts that I am working on, thanks to my <a href="/obsidian-web-publisher.html">Obsidian web publisher</a> which it is developed with (read more below).</p>
+<p>This website was created to serve as a home for my <a href="/projects.html">projects</a> and <a href="/blog.html">blog</a>. It is updated regularly to include the newest projects and posts that I am working on, thanks to my Obsidian Web Publisher; which was used to develop and create this website.</p>
 <h4>Projects</h4>
 <p>The <a href="/projects.html">projects</a> page provides an overview of my projects (with GitHub links), including what technology and skills were used to create them.</p>
-<p><b>Featured Projects</b></p>
-<p><a href="/obsidian-web-publisher.html">Obsidian Web Publisher</a></p>
-<p><a href="/cryptocurrency-data-scraper.html">Cryptocurrency Data Scraper</a></p>
 <h4>Blog</h4>
 <p>The <a href="/blog.html">blog</a> is just a place for me to write about tech, code, and projects.</p>
-<p><b>Featured Post</b></p>
-<p><a href="/see-you-at-the-finish-line-a-web-scraper-performance-improvement-analysis.html">See You at the Finish Line, a Web Scraper Performance Improvement Analysis</a></p>
-<h3>Why does this website look like this?</h3>
-<p>This website was developed with my Obsidian Web Publisher, a lightweight system I developed to publish a website easily and freely using Obsidian and GitHub Pages. The styling for this website is done completely with <a href="https://github.com/markdowncss/retro">classless CSS</a>. You can read more about how this system works at the <a href="/obsidian-web-publisher.html">project page</a>.</p>
 <br>
+<h3>Why does this website look like this?</h3>
+<p>This website was developed with my Obsidian Web Publisher, a lightweight system I developed to publish a website easily and freely using Obsidian, a markdown editor, and GitHub Pages. The styling for this website is done completely with classless CSS. You can read more about how this system works on the <a href="/blog.html">Blog</a> page.</p>
 </body>
 </html>
