--- a/connect.html
+++ b/connect.html
@@ -10,7 +10,7 @@
 </header>
 <body>
 <h1>Nicholas Shaw</h1>
-<h6>Computer Science, Problem Solving, Research and Development</h6>
+<p>Computer Science, Problem Solving, Research and Development</p>
 <p><a href="/index.html">Home</a> | <a href="/projects.html">Projects</a> | <a href="/blog.html">Blog</a> | <a href="/about.html">About</a> | <b><i><a href="/connect.html">Connect</a></b></i></p>
 <h3>Email Me</h3>
 <p>connect@nicholasshaw.email</p>
