--- a/projects.html
+++ b/projects.html
@@ -10,24 +10,20 @@
 </header>
 <body>
 <h1>Nicholas Shaw</h1>
-<h6>Computer Science, Problem Solving, Research and Development</h6>
+<p>Computer Science, Problem Solving, Research and Development</p>
 <p><a href="/index.html">Home</a> | <b><i><a href="/projects.html">Projects</a></b></i> | <a href="/blog.html">Blog</a> | <a href="/about.html">About</a> | <a href="/connect.html">Connect</a></p>
 <h3>Cryptocurrency Data Scraper</h3>
-<p><a href="/cryptocurrency-data-scraper.html">Project Page</a> | <a href="https://github.com/nshaw928/cryptocurrency-data-scraper">GitHub Repository</a></p>
+<p><a href="https://github.com/nshaw928/cryptocurrency-data-scraper">GitHub Repository</a></p>
 <h6>Description</h6>
 <p>A scraper which allows users to gather cryptocurrency data for a given date/time range and sampling frequency.</p>
-<h6>Technology</h6>
-<p>Python, Selenium, Pandas</p>
-<h6>Skills</h6>
-<p>Web Scraping, Data Aggregation, Data Cleaning</p>
+<p><b>Technology:</b> Python, Selenium, Pandas</p>
+<p><b>Skills:</b> Web Scraping, Data Aggregation, Data Cleaning</p>
 <h3>Obsidian Web Publisher</h3>
-<p><a href="/obsidian-web-publisher.html">Project Page</a> | <a href="https://github.com/nshaw928/obsidian-web-publisher">GitHub Repository</a></p>
+<p><a href="https://github.com/nshaw928/obsidian-web-publisher">GitHub Repository</a></p>
 <h6>Description</h6>
 <p>A system built for publishing websites using GitHub Pages created from markdown files in Obsidian or other markdown editor.</p>
-<h6>Technology</h6>
-<p>Python, Git, GitHub, Markdown, HTML</p>
-<h6>Skills</h6>
-<p>File parsing, File Manipulation</p>
+<p><b>Technology</b>: Python, Git, GitHub, Markdown, HTML</p>
+<p><b>Skills:</b> File parsing, File Manipulation</p>
 <br>
 </body>
 </html>
