Minor edits and added blog post

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 <h1>Nicholas Shaw</h1>
 <p>Computer Science, Problem Solving, Research and Development</p>
 <p><a href="/index.html">Home</a> | <a href="/projects.html">Projects</a> | <b><i><a href="/blog.html">Blog</a></b></i> | <a href="/about.html">About</a> | <a href="/connect.html">Connect</a></p>
-<h3>[[Development and Design of this Website]]</h3>
+<h3><a href="/development-and-design-of-this-website.html">Development and Design of this Website</a></h3>
 <p>2024-10-25</p>
 <p>Read about how this website was created, why it looks the way it does, and how you too can create one just like it.</p>
 </body>
