--- a/projects.html
+++ b/projects.html
@@ -14,14 +14,12 @@
 <p><a href="/index.html">Home</a> | <b><i><a href="/projects.html">Projects</a></b></i> | <a href="/blog.html">Blog</a> | <a href="/about.html">About</a> | <a href="/connect.html">Connect</a></p>
 <h3>Cryptocurrency Data Scraper</h3>
 <p><a href="https://github.com/nshaw928/cryptocurrency-data-scraper">GitHub Repository</a></p>
-<h6>Description</h6>
-<p>A scraper which allows users to gather cryptocurrency data for a given date/time range and sampling frequency.</p>
+<p><b>Description:</b> A scraper which allows users to gather cryptocurrency data for a given date/time range and sampling frequency.</p>
 <p><b>Technology:</b> Python, Selenium, Pandas</p>
 <p><b>Skills:</b> Web Scraping, Data Aggregation, Data Cleaning</p>
 <h3>Obsidian Web Publisher</h3>
 <p><a href="https://github.com/nshaw928/obsidian-web-publisher">GitHub Repository</a></p>
-<h6>Description</h6>
-<p>A system built for publishing websites using GitHub Pages created from markdown files in Obsidian or other markdown editor.</p>
+<p><b>Description:</b> A system built for publishing websites using GitHub Pages created from markdown files in Obsidian or other markdown editor.</p>
 <p><b>Technology</b>: Python, Git, GitHub, Markdown, HTML</p>
 <p><b>Skills:</b> File parsing, File Manipulation</p>
 <br>
