--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <p>I'm <b>Nick</b>, and I love solving problems. Currently, I am a computer science masters student at the University of Colorado Boulder. While in school, I am actively looking for opportunities to collaborate with and learn from others. If this sounds like you, let's <a href="/connect.html">connect</a>!</p>
 <br>
 <h3>What is the purpose of this website?</h3>
-<p>This website was created to serve as a home for my <a href="/projects.html">projects</a> and <a href="/blog.html">blog</a>. It is updated regularly to include the newest projects and posts that I am working on, thanks to my Obsidian Web Publisher; which was used to develop and create this website.</p>
+<p>This website was created to serve as a home for my projects and blog. It is updated regularly to include the newest projects and posts that I am working on, thanks to my Obsidian Web Publisher; which was used to develop and create this website.</p>
 <h4>Projects</h4>
 <p>The <a href="/projects.html">projects</a> page provides an overview of my projects (with GitHub links), including what technology and skills were used to create them.</p>
 <h4>Blog</h4>
 <p>The <a href="/blog.html">blog</a> is just a place for me to write about tech, code, and projects.</p>
 <br>
 <h3>Why does this website look like this?</h3>
-<p>This website was developed with my Obsidian Web Publisher, a lightweight system I developed to publish a website easily and freely using Obsidian, a markdown editor, and GitHub Pages. The styling for this website is done completely with classless CSS. You can read more about how this system works on the <a href="/blog.html">Blog</a> page.</p>
+<p>This website was developed with my Obsidian Web Publisher, a lightweight system I developed to publish a website easily and freely using Obsidian, a markdown editor, and GitHub Pages. The styling for this website is done completely with classless CSS. You can read more about how this system works in <a href="/development-and-design-of-this-website.html">this blog post</a>.</p>
 </body>
 </html>
