--- a/about.html
+++ b/about.html
@@ -12,7 +12,16 @@
 <h1>Nicholas Shaw</h1>
 <p>Computer Science, Problem Solving, Research and Development</p>
 <p><a href="/index.html">Home</a> | <a href="/projects.html">Projects</a> | <a href="/blog.html">Blog</a> | <b><i><a href="/about.html">About</a></b></i> | <a href="/connect.html">Connect</a></p>
-<h3>Oops</h3>
-<p>You're early! This page has not yet been written. Some information on me can be found on my <a href="https://www.linkedin.com/in/nicholasryanshaw/">LinkedIn</a> and <a href="https://github.com/nshaw928">GitHub</a>. Alternatively, send me an email at connect@nicholasshaw.email.</p>
+<h3>Who is Nicholas Shaw?</h3>
+<p>I'm a computer scientist with a biochemical research background.</p>
+<p>Through my experiences, I've developed skills in research, problem solving, computer science, and biochemistry.</p>
+<h3>Research Experience</h3>
+<p>During my undergraduate degree I was a member of 3 different research labs. It was an incredible pleasure and honor to work with everyone in these labs, and I consider these experiences the most enriching experiences of my four years of undergrad.</p>
+<h5><a href="https://scholar.google.com/citations?user=vuouiviaaaaj&hl=en">Nakafuku Lab</a>, 2020</h5>
+<p>First, I joined the Nakafuku Lab investigating neural stem cell migration and differentiation patterns. During my time in the Nakafuku lab, I analyzed multi-channel confocal microscopy images to determine the origin and destination of neurons within mice brain sections. Early in my time with the lab, I streamlined their image analysis macro script resulting in ~10% faster image analysis</p>
+<h5><a href="https://seegarlab.com/index.html">Seegar Lab</a>, 2021 - 2023</h5>
+<p>After Dr. Nakafuku announced his retirement, I moved onto a new challenge when I joined the Seegar Lab. Dr. Seegar contributed massively to my development both scientifically and personally. Within the Seegar Lab, I learned the entire structural biology pipeline from cloning DNA into vectors, expressing vectors in eukaryotic expression systems, protein purification, and finally protein crystallization and x-ray crystallography. With the support of Dr. Seegar and the UC Office of Nationally Completive Awards, I was able to apply for and receive the <a href="https://goldwaterscholarship.gov/">Goldwater Scholarship</a>. During spring 2022, the majority of my work with the Seegar Lab concluded, with my work shifting away from wet lab research to computational methods in structural biology.</p>
+<h5><a href="https://brown.hms.harvard.edu/">Brown Lab</a>, 2022 - 2023</h5>
+<p>I arrived at the Brown lab during the summer of 2022 as a <a href="https://scholars.hms.harvard.edu/info">BCMP Summer Scholar</a>. This period of time was very exciting for structural biology researchers due to <a href="https://deepmind.google/technologies/alphafold/">AlphaFold</a>, a machine learning model for protein structure prediction, being recently released to the public. Unfortunately at the time, the size of these predictions were limited to around 2000 amino acids due to GPU constraints. I developed a method which allowed the lab to piece together multiple small predictions into large structure predictions that far exceeded the 2000 amino acid limit. In validating the method, it was able to accurately place 12 of the 14 domains of the cytochrome C oxidase structure. After the method was complete, I focused on developing a better machine learning tool than what was currently published to evaluate the "naturalness" of predicted protein-protein interactions.</p>
 </body>
 </html>
